@@ -19,7 +19,6 @@ package com.hedera.node.app.service.mono.queries.crypto;
 import static com.hedera.node.app.service.mono.utils.EntityNumPair.fromAccountTokenRel;
 import static com.hedera.test.utils.IdUtils.asAccount;
 import static com.hedera.test.utils.IdUtils.asContract;
-import static com.hedera.test.utils.IdUtils.tokenBalanceWith;
 import static com.hederahashgraph.api.proto.java.HederaFunctionality.CryptoGetAccountBalance;
 import static com.hederahashgraph.api.proto.java.ResponseCodeEnum.ACCOUNT_DELETED;
 import static com.hederahashgraph.api.proto.java.ResponseCodeEnum.CONTRACT_DELETED;
@@ -37,7 +36,6 @@ import com.google.protobuf.ByteString;
 import com.hedera.node.app.hapi.utils.ByteStringUtils;
 import com.hedera.node.app.service.mono.context.MutableStateChildren;
 import com.hedera.node.app.service.mono.context.primitives.StateView;
-import com.hedera.node.app.service.mono.context.properties.GlobalDynamicProperties;
 import com.hedera.node.app.service.mono.ledger.accounts.AliasManager;
 import com.hedera.node.app.service.mono.legacy.core.jproto.JEd25519Key;
 import com.hedera.node.app.service.mono.legacy.core.jproto.JKey;
@@ -64,7 +62,7 @@ import com.hederahashgraph.api.proto.java.ResponseCodeEnum;
 import com.hederahashgraph.api.proto.java.ResponseType;
 import com.hederahashgraph.api.proto.java.TokenID;
 import com.swirlds.merkle.map.MerkleMap;
-import java.util.List;
+import java.util.Collections;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -77,9 +75,6 @@ class GetAccountBalanceAnswerTest {
     private AccountStorageAdapter accounts;
 
     @Mock
-    private GlobalDynamicProperties dynamicProperties;
-
-    @Mock
     private OptionValidator optionValidator;
 
     @Mock
@@ -89,7 +84,7 @@ class GetAccountBalanceAnswerTest {
 
     @BeforeEach
     void setup() {
-        subject = new GetAccountBalanceAnswer(aliasManager, optionValidator, dynamicProperties);
+        subject = new GetAccountBalanceAnswer(aliasManager, optionValidator);
     }
 
     @Test
@@ -236,7 +231,6 @@ class GetAccountBalanceAnswerTest {
         given(aliasManager.lookupIdBy(aliasId.getAlias())).willReturn(wellKnownId);
         accountV.setKey(EntityNum.fromAccountId(asAccount(accountIdLit)));
         given(accounts.get(wellKnownId)).willReturn(accountV);
-        given(dynamicProperties.maxTokensRelsPerInfoQuery()).willReturn(maxTokenRels);
 
         final CryptoGetAccountBalanceQuery op =
                 CryptoGetAccountBalanceQuery.newBuilder().setAccountID(aliasId).build();
@@ -249,12 +243,7 @@ class GetAccountBalanceAnswerTest {
 
         assertTrue(response.getCryptogetAccountBalance().hasHeader(), "Missing response header!");
         assertEquals(
-                List.of(
-                        tokenBalanceWith(aToken, aBalance, 1),
-                        tokenBalanceWith(bToken, bBalance, 2),
-                        tokenBalanceWith(cToken, cBalance, 123),
-                        tokenBalanceWith(dToken, dBalance, 123)),
-                response.getCryptogetAccountBalance().getTokenBalancesList());
+                Collections.emptyList(), response.getCryptogetAccountBalance().getTokenBalancesList());
         assertEquals(OK, status);
         assertEquals(balance, answer);
         assertEquals(
@@ -269,7 +258,6 @@ class GetAccountBalanceAnswerTest {
         final var wellKnownId = EntityNum.fromLong(12345L);
         accountV.setKey(EntityNum.fromAccountId(asAccount(accountIdLit)));
         given(accounts.get(wellKnownId)).willReturn(accountV);
-        given(dynamicProperties.maxTokensRelsPerInfoQuery()).willReturn(maxTokenRels);
 
         // when:
         final Response response = subject.responseGiven(query, wellKnownView(), OK);
@@ -279,13 +267,9 @@ class GetAccountBalanceAnswerTest {
 
         // expect:
         assertTrue(response.getCryptogetAccountBalance().hasHeader(), "Missing response header!");
+        // we don't return token balances data in the query anymore since it is deprecated
         assertEquals(
-                List.of(
-                        tokenBalanceWith(aToken, aBalance, 1),
-                        tokenBalanceWith(bToken, bBalance, 2),
-                        tokenBalanceWith(cToken, cBalance, 123),
-                        tokenBalanceWith(dToken, dBalance, 123)),
-                response.getCryptogetAccountBalance().getTokenBalancesList());
+                Collections.emptyList(), response.getCryptogetAccountBalance().getTokenBalancesList());
         assertEquals(OK, status);
         assertEquals(balance, answer);
         assertEquals(id, response.getCryptogetAccountBalance().getAccountID());
@@ -299,7 +283,6 @@ class GetAccountBalanceAnswerTest {
         accountV.setKey(EntityNum.fromAccountId(asAccount(accountIdLit)));
         final var view = wellKnownView();
         given(accounts.get(EntityNum.fromContractId(id))).willReturn(accountV);
-        given(dynamicProperties.maxTokensRelsPerInfoQuery()).willReturn(maxTokenRels);
 
         // when:
         final Response response = subject.responseGiven(query, view, OK);
@@ -310,12 +293,7 @@ class GetAccountBalanceAnswerTest {
         // expect:
         assertTrue(response.getCryptogetAccountBalance().hasHeader(), "Missing response header!");
         assertEquals(
-                List.of(
-                        tokenBalanceWith(aToken, aBalance, 1),
-                        tokenBalanceWith(bToken, bBalance, 2),
-                        tokenBalanceWith(cToken, cBalance, 123),
-                        tokenBalanceWith(dToken, dBalance, 123)),
-                response.getCryptogetAccountBalance().getTokenBalancesList());
+                Collections.emptyList(), response.getCryptogetAccountBalance().getTokenBalancesList());
         assertEquals(OK, status);
         assertEquals(balance, answer);
         assertEquals(
